--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/uuid": "^8.3.4",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromatic": "^6.10.5",
     "prop-types": "^15.8.1",
     "webpack": "^5.74.0"
   },
@@ -44,7 +45,8 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token=4f290294712d"
   },
   "eslintConfig": {
     "extends": [
@@ -73,5 +75,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "mcapp@0.1.0"
 }
