--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bsod": "^1.0.4",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
